styles/css/phone/header/vtex.store-drawer.css
.openIconContainer {
    color     : #ffff;
    align-self: center;
}

.drawerContent--phone__drawer_login {
    background-color: #330e82;
}

.drawerHeader--mobile__drawer-login {
    flex-direction: row-reverse;
}

.drawerHeader--phone__drawer_header-menu {
    justify-content: space-between;
}

.drawerHeader--phone__drawer_header-menu :first-child {
    color  : #ffff;
    z-index: 1;
}

.drawerHeader--mobile__drawer-login :first-child {
    color  : #ffff;
    z-index: 1;
}

/* Searchbar drawer */
.drawerHeader--phone__drawer-searchbar {
    justify-content: space-between;
    border         : solid black 1px;
}

.drawerHeader--phone__drawer-searchbar :global(.vtex-store-drawer-0-x-closeIconButton) {
    color  : #ffff;
    z-index: 1;
}

.drawerHeader--phone__drawer-searchbar :global(.vtex-input-prefix__group) {
    border        : none;
    flex-direction: row-reverse;
}

